[package]
name = "tuple_type"
version = "0.1.0"
authors = ["Robin Freyler"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/robbepop/tuple_type"
documentation = "https://docs.rs/tuple_type"
keywords = ["tuple", "indexing", "type", "reflection"]
description = """Utility trait to index type of Rust tuples."""
categories = ["no-std", "rust-patterns"]
edition = "2021"

[dependencies]

[dev-dependencies]
trybuild = "1"
