[package]
name = "type_at"
version = "0.1.0"
authors = ["Robin Freyler"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = """Utility trait to index type of Rust tuples."""
repository = "https://github.com/robbepop/type_at"
documentation = "https://docs.rs/type_at"
keywords = ["tuple", "indexing", "type", "reflection"]
categories = ["no-std", "rust-patterns"]
edition = "2021"

[dependencies]
type_at_derive = { version = "0.1", path = "derive" }

[dev-dependencies]
trybuild = "1"

[features]
default = []

[workspace]
members = ["derive"]
