[package]
name = "type_at_derive"
version = "0.1.0"
authors = ["Robin Freyler"]
license = "MIT/Apache-2.0"
readme = "../README.md"
description = "Provides the #[derive(TypeAt)] proc. macro."
repository = "https://github.com/Robbepop/type_at"
documentation = "https://docs.rs/type_at_derive"
keywords = ["tuple", "indexing", "type", "reflection"]
categories = ["no-std", "rust-patterns"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = {version = "1", default-features = false, features = [
  "derive",
  "parsing",
  "proc-macro",
  "printing",
]}
proc-macro-crate = "1"

[dev-dependencies]
type_at = { path = "..", features = [] }
